--- a/styles/style.css
+++ b/styles/style.css
@@ -328,6 +328,10 @@
     top: 10px;
     right: 28px;
   }
+
+  .header__theme-menu-list {
+    gap: 17px
+  }
   
   .header__title {
     font-size: clamp(7.25rem, 2.0115rem + 0.0178vw, 8.5rem);
@@ -463,12 +467,13 @@
   }
   
   .header__title {
-    font-size: clamp(5.5rem, 0.5625rem + 12.4531vw, 7.8125rem);
-    margin-top: 15px;
-    letter-spacing: 11px;
+    font-size: clamp(6.95rem, 1.5625rem + 5.4531vw, 0.8125rem);
+    margin-top: 6px;
+    letter-spacing: 6px;
   }
   
   .header__text {
+    padding: 0 0 0 0;
     max-width: 364px;
     margin-bottom: 2px;
     margin-right: 20px;
@@ -490,6 +495,7 @@
   
   .content-section {
     margin-left: 21px;
+    gap: 15px;
   }
 
   .content-section--why {
@@ -505,6 +511,10 @@
     margin-bottom: 0;
     padding-top: 5px;
     width: 211px;
+  }
+
+  .content-section--factors .content-section__title {
+    margin-top: 10px;
   }
   
   .content-section__body {
@@ -564,7 +574,11 @@
     grid-template-columns: 1fr 2fr;
     gap: 11px;
     margin-bottom: 60px;
-    margin-top: 44px;
+    margin-top: 40px;
+  }
+
+  .tips-header__main {
+    margin-top: 4px;
   }
 
   .content-section--tips .content-section__body--tips {
@@ -575,8 +589,13 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
     gap: 20px;
-    margin-top: 25px;
+    margin-top: 20px;
     margin-right: 19px;
+  }
+
+  .gallery__title--custom {
+    width: 97%;
+    height: 22px;
   }
   
   .gallery__image:nth-child(1) {
@@ -647,8 +666,9 @@
   
   .header__theme-menu-list {
     flex-direction: row;
-    margin-top: 13px;
-    gap: 29px;
+    margin-top: 22px;
+    gap: 33px;
+    margin-left: 32px;
   }
   
   .header__rec {
@@ -665,8 +685,8 @@
   .header__text {
     max-width: 490px;
     width: 100%;
-    margin-bottom: 21px;
-    margin-right: 19px;
+    margin-bottom: 23px;
+    margin-right: 21px;
     padding: 0 0 0 0;
   }
   
@@ -680,14 +700,23 @@
     grid-template-columns: 1fr 2fr;
     gap: 10px;
     align-items: start;
-    margin-bottom: 53px;
-    margin-top: 59px;
+    margin-bottom: 79px;
+    margin-top: 56px;
     margin-left: 13px;
+  }
+
+  .content-section--why .content-section__title {
+    margin-left: 7px;
+  }
+
+  .text-card__paragraph {
+    margin-top: 4px;
   }
   
   .content-section__title {
     margin-bottom: 0;
     width: 284px;
+    margin-left: 0px;
   }
   
   .content-section__body {
@@ -695,17 +724,19 @@
   }
   
   .text-card__content {
-    padding-top: 11px;
+    padding-top: 7px;
   }
 
   .title-decor {
     margin-top: 4px;
+    height: 23px;
   }
 
   .content-section--factors {
     margin-bottom: 8px;
     padding: 0px 0;
     margin-left: 21px;
+    gap: 15px;
   }
   
   .content-section__body--card-column {
@@ -729,6 +760,7 @@
     margin-bottom: 0;
     align-items: start;
     margin-left: 21px;
+    margin-top: 49px;
   }
   
   .content-section--tips .tips-header__main {
@@ -778,6 +810,7 @@
     font-size: 18px;
     line-height: 1.3;
     margin-bottom: 0px;
+    margin-top: 4px;
   }
   
   .content-section--tips .text-card--advice:last-child .text-card__paragraph {
@@ -789,7 +822,7 @@
     grid-template-rows: repeat(3, auto);
     gap: 20px;
     width: 98%;
-    margin-top: 22px;
+    margin-top: 17px;
   }
   
   .gallery__image:nth-child(1) {
@@ -836,4 +869,15 @@
     bottom: 20px;
     left: 20px;
   }
+
+  .footer-decorated::before {
+  top: 60px;
+  right: 20px;
+}
+
+.footer-decorated::after {
+  bottom: 0px;
+  left: 20px;
+  top: 763px;
+}
 }
