--- a/styles/style.css
+++ b/styles/style.css
@@ -239,7 +239,7 @@
   margin-bottom: 20px;
   font-weight: 700;
   line-height: 1.3;
-  height: 18px;
+  min-height: 18px;
 }
 
 .gallery__grid {
@@ -700,7 +700,7 @@
     grid-template-columns: 1fr 2fr;
     gap: 10px;
     align-items: start;
-    margin-bottom: 79px;
+    margin-bottom: 69px;
     margin-top: 56px;
     margin-left: 13px;
   }
